--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Destination</h6>
                 <h1>Explore Top Destination</h1>
             </div>
-            <div class="row shadow pt-4">
+            <div class="row shadow pt-4 justify-content-center">
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="destination-item position-relative overflow-hidden mb-2">
                         <img class="img-fluid" src="img/destination/wahkhen_16_10.jpg" alt="">
@@ -234,15 +234,6 @@
                         <img class="img-fluid" src="img/destination/mawkyrnot_16_10.jpg" alt="">
                         <a class="destination-overlay text-white text-decoration-none" href="">
                             <h5 class="text-white">Mawkyrnot</h5>
-                            <span>....</span>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="destination-item position-relative overflow-hidden mb-2">
-                        <img class="img-fluid" src="img/destination-3.jpg" alt="">
-                        <a class="destination-overlay text-white text-decoration-none" href="">
-                            <h5 class="text-white">Pynursla</h5>
                             <span>....</span>
                         </a>
                     </div>
