--- a/index.html
+++ b/index.html
@@ -2021,17 +2021,22 @@
                 <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Guides</h6>
                 <h1>Our Travel Guides</h1>
             </div>
-            <div class="row shadow pt-4">
+            <div class="row shadow pt-4 flex justify-content-center">
                 <div class="col-lg-3 col-md-4 col-sm-6 pb-2">
                     <div class="team-item bg-white mb-4">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
-                            <div class="team-social">
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/rikhasi_trail_agency_" target="_blank"><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-linkedin-in"></i></a>
-                            </div>
+                            <img class="img-fluid w-100" src="img/tour_guide/tour_guide_1.jpeg" alt="">
+                        </div>
+                        <div class="text-center py-4">
+                            <h5 class="text-truncate">Kitbor</h5>
+                            <p class="m-0">Tour Guide</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 pb-2">
+                    <div class="team-item bg-white mb-4">
+                        <div class="team-img position-relative overflow-hidden">
+                            <img class="img-fluid w-100" src="img/tour_guide/1by1.jpg" alt="">
                         </div>
                         <div class="text-center py-4">
                             <h5 class="text-truncate">Guide Name</h5>
@@ -2042,13 +2047,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 pb-2">
                     <div class="team-item bg-white mb-4">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
-                            <div class="team-social">
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/rikhasi_trail_agency_" target="_blank"><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-linkedin-in"></i></a>
-                            </div>
+                            <img class="img-fluid w-100" src="img/tour_guide/1by1.jpg" alt="">
                         </div>
                         <div class="text-center py-4">
                             <h5 class="text-truncate">Guide Name</h5>
@@ -2059,30 +2058,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 pb-2">
                     <div class="team-item bg-white mb-4">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
-                            <div class="team-social">
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/rikhasi_trail_agency_" target="_blank"><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-linkedin-in"></i></a>
-                            </div>
-                        </div>
-                        <div class="text-center py-4">
-                            <h5 class="text-truncate">Guide Name</h5>
-                            <p class="m-0">Designation</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6 pb-2">
-                    <div class="team-item bg-white mb-4">
-                        <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-4.jpg" alt="">
-                            <div class="team-social">
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/rikhasi_trail_agency_" target="_blank"><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-outline-primary btn-square" href=""><i class="fab fa-linkedin-in"></i></a>
-                            </div>
+                            <img class="img-fluid w-100" src="img/tour_guide/1by1.jpg" alt="">
                         </div>
                         <div class="text-center py-4">
                             <h5 class="text-truncate">Guide Name</h5>
